fix login logout
