# app/OpenApi.php
@@ -13,4 +13,11 @@ use OpenApi\Attributes as OA;
     url: "http://127.0.0.1:8000",
     description: "Local Development Server"
 )]
+
+#[OA\SecurityScheme(
+    securityScheme: "bearerAuth",
+    type: "http",
+    scheme: "bearer",
+    bearerFormat: "JWT"
+)]
 class OpenApi {}
