# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AlatController;
+use App\Http\Controllers\LoginController;
 use App\Http\Controllers\MasterData\KategoriAlatController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -9,17 +10,24 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-Route::prefix('master-data')->group(function() {
-    Route::get('/kategori-alat', [KategoriAlatController::class, 'index']);
-    Route::post('/kategori-alat', [KategoriAlatController::class, 'store']);
-    Route::patch('/kategori-alat/{id}', [KategoriAlatController::class, 'update']);
-    Route::delete('/kategori-alat/{id}', [KategoriAlatController::class, 'delete']);
-});
+Route::post('/login', [LoginController::class, 'login']);
 
-Route::prefix('alats')->group(function() {
-    Route::get('/', [AlatController::class, 'index']);
-    Route::get('/{id}', [AlatController::class, 'show']);
-    Route::post('/', [AlatController::class, 'store']);
-    Route::patch('/{id}', [AlatController::class, 'update']);
-    Route::delete('/{id}', [AlatController::class, 'delete']);
+Route::middleware('auth:sanctum')->group(function() {
+    Route::post('/logout', [LoginController::class, 'logout']);
+
+    Route::prefix('master-data')->group(function() {
+        Route::get('/kategori-alat', [KategoriAlatController::class, 'index']);
+        Route::get('/kategori-alat/active', [KategoriAlatController::class, 'getActiveKategori']);
+        Route::post('/kategori-alat', [KategoriAlatController::class, 'store']);
+        Route::patch('/kategori-alat/{id}', [KategoriAlatController::class, 'update']);
+        Route::delete('/kategori-alat/{id}', [KategoriAlatController::class, 'delete']);
+    });
+
+    Route::prefix('alats')->group(function() {
+        Route::get('/', [AlatController::class, 'index']);
+        Route::get('/{id}', [AlatController::class, 'show']);
+        Route::post('/', [AlatController::class, 'store']);
+        Route::patch('/{id}', [AlatController::class, 'update']);
+        Route::delete('/{id}', [AlatController::class, 'delete']);
+    });
 });
