# storage/api-docs/api-docs.json
@@ -23,7 +23,12 @@
                     "200": {
                         "description": "Berhasil mengambil data"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -34,7 +39,7 @@
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "required": [
                                     "kode",
@@ -42,41 +47,32 @@
                                 ],
                                 "properties": {
                                     "kode": {
-                                        "type": "string",
-                                        "example": "A001"
+                                        "type": "string"
                                     },
                                     "nama": {
-                                        "type": "string",
-                                        "example": "Laptop Asus"
+                                        "type": "string"
                                     },
                                     "kategori_alat_id": {
-                                        "type": "integer",
-                                        "example": 1
+                                        "type": "integer"
                                     },
                                     "kondisi": {
-                                        "type": "string",
-                                        "example": "baik"
+                                        "type": "string"
                                     },
                                     "deskripsi": {
-                                        "type": "string",
-                                        "example": "Laptop untuk keperluan desain"
+                                        "type": "string"
                                     },
                                     "lokasi": {
-                                        "type": "string",
-                                        "example": "Lab Komputer"
+                                        "type": "string"
                                     },
                                     "foto": {
                                         "type": "string",
-                                        "format": "binary",
-                                        "example": "foto_alat.jpg"
+                                        "format": "binary"
                                     },
                                     "stok": {
-                                        "type": "integer",
-                                        "example": 10
+                                        "type": "integer"
                                     },
                                     "status": {
-                                        "type": "string",
-                                        "example": "tersedia"
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -88,7 +84,12 @@
                     "201": {
                         "description": "Berhasil menambahkan alat"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/alats/{id}": {
@@ -112,7 +113,12 @@
                     "200": {
                         "description": "Berhasil mengambil detail"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -134,7 +140,12 @@
                     "200": {
                         "description": "Berhasil hapus"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "patch": {
                 "tags": [
@@ -205,7 +216,104 @@
                     "200": {
                         "description": "Berhasil update"
                     }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login user",
+                "operationId": "c5e838284c7f343f0e5e5fd589161c96",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "admin@admin.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "admin123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Login berhasil",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "user": {
+                                            "type": "object"
+                                        },
+                                        "token": {
+                                            "type": "string",
+                                            "example": "1|extytasuppi123!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Email atau password salah"
+                    }
                 }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout user",
+                "operationId": "399284ae5e84627c95a691127018a412",
+                "responses": {
+                    "200": {
+                        "description": "Logout berhasil",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Logout berhasil"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/master-data/kategori-alat": {
@@ -253,6 +361,20 @@
                 "responses": {
                     "201": {
                         "description": "Berhasil menambahkan kategori"
+                    }
+                }
+            }
+        },
+        "/api/master-data/kategori-alat/active": {
+            "get": {
+                "tags": [
+                    "Master Data - Kategori Alat"
+                ],
+                "summary": "Ambil kategori alat dengan status active",
+                "operationId": "e1d993edd2c88cba8cfaa292177f9f6d",
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mengambil data kategori active"
                     }
                 }
             }
@@ -328,6 +450,15 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
         {
             "name": "Alat",
@@ -336,6 +467,10 @@
         {
             "name": "Master Data - Kategori Alat",
             "description": "API untuk mengelola kategori alat"
+        },
+        {
+            "name": "Auth",
+            "description": "Auth"
         }
     ]
 }
